# poke

./: .gitignore  .gitmodules  .x-sc_codespell  .x-sc_file_system  .x-sc_prohibit_strncpy  AUTHORS  ChangeLog  DEPENDENCIES  HACKING  INSTALL  MAINTAINERS  Makefile.am  NEWS  NO-WARRANTY  README  README-hacking  THANKS  TODO  amend-autom4te-output  bootstrap.conf  cfg.mk  configure.ac  run.in
autoconf/: Makefile.am  jitter.m4  poke.m4
build-aux/: trivial-source.c
common/: pk-utils.c  pk-utils.h
doc/: Makefile.am  gen-pvm-insns.sh  gendocs_template  jitter.texi  learn-poke-language-in-y-minutes.pk  missing-man-page.1  poke.texi  poke2texi.pk  pokeint.texi
emacs/: jitter-mode.el
etc/: Makefile.am  git.orderfile  hacking.org  parse-valgrind-suppressions.sh  poke-dark.css  poke-gdb.scm  poke-map-mode.el  poke-pretty-printer.py  poke-ras-mode.el  poke.g4  poke.rec  pvm-wraps-static-whitelist  pvm-wraps-whitelist
etc/nix/: default.nix
example-build-systems/: AUTHORS  ChangeLog  NEWS  README  bootstrap
example-build-systems/structured-simple/: Makefile.am  configure.ac
example-build-systems/structured-with-library/: Makefile.am  configure.ac
example-vms/jitterlisp/: THANKS  jitterlisp-allocator.c  jitterlisp-allocator.h  jitterlisp-ast.c  jitterlisp-ast.h  jitterlisp-banner.c  jitterlisp-banner.h  jitterlisp-code-generator.c  jitterlisp-code-generator.h  jitterlisp-config.h  jitterlisp-constant-strings.h  jitterlisp-constants.c  jitterlisp-constants.h  jitterlisp-error.c  jitterlisp-error.h  jitterlisp-eval-interpreter.c  jitterlisp-eval-interpreter.h  jitterlisp-eval-vm.c  jitterlisp-eval-vm.h  jitterlisp-eval.c  jitterlisp-eval.h  jitterlisp-library.lisp  jitterlisp-macros.c  jitterlisp-macros.h  jitterlisp-main.c  jitterlisp-operations.c  jitterlisp-operations.h  jitterlisp-primitives.c  jitterlisp-primitives.h  jitterlisp-printer.c  jitterlisp-printer.h  jitterlisp-reader.c  jitterlisp-reader.h  jitterlisp-run-input.c  jitterlisp-run-input.h  jitterlisp-settings.c  jitterlisp-settings.h  jitterlisp-sexpression.c  jitterlisp-sexpression.h  jitterlisp-style.css  (+5 more)
example-vms/structured/: structured-code-generator-register.c  structured-code-generator-register.h  structured-code-generator-stack.c  structured-code-generator-stack.h  structured-code-generator.c  structured-code-generator.h  structured-main.c  structured-style.css  structured-syntax.c  structured-syntax.h  structured.jitter  structured.l  structured.y
example-vms/uninspired/: uninspired-style.css  uninspired.jitter
fuzz/: fuzz_compiler.c
jitter/: jitter-aligned-block.c  jitter-aligned-block.h  jitter-arithmetic.c  jitter-arithmetic.h  jitter-bitwise.h  jitter-c-compiler-version.h  jitter-config.h.in  jitter-cpp.h  jitter-data-locations.c  jitter-data-locations.h  jitter-defect.c  jitter-defect.h  jitter-disassemble.c  jitter-disassemble.h  jitter-dynamic-buffer.c  jitter-dynamic-buffer.h  jitter-early-header.h  jitter-executor.h  jitter-fast-branch.c  jitter-fast-branch.h  jitter-fatal.c  jitter-fatal.h  jitter-hash-random-table.c  jitter-hash.c  jitter-hash.h  jitter-heap-debug.c  jitter-heap-debug.h  jitter-heap.c  jitter-heap.h  jitter-human-prefix.c  jitter-human-prefix.h  jitter-instruction.c  jitter-instruction.h  jitter-list.c  jitter-list.h  jitter-machine-common.S  jitter-machine-common.h  jitter-malloc.c  jitter-malloc.h  jitter-missing.c  (+47 more)
jitterc/: jitterc-generate.c  jitterc-generate.h  jitterc-main.c  jitterc-mangle.c  jitterc-mangle.h  jitterc-rewrite.c  jitterc-rewrite.h  jitterc-utility.c  jitterc-utility.h  jitterc-vm.c  jitterc-vm.h  jitterc.l  jitterc.y
libpoke/: Makefile.am  ios-buffer.c  ios-dev-file.c  ios-dev-mem.c  ios-dev-mmap.c  ios-dev-nbd.c  ios-dev-proc.c  ios-dev-stream.c  ios-dev-sub.c  ios-dev-zero.c  ios-dev.h  ios-ivlist.h  ios-ivtree.h  ios-range.c  ios-range.h  ios.c  ios.h  jitter-gc.c  jitter-gc.h  libpoke.c  libpoke.h  pk-val.c  pkl-anal.c  pkl-anal.h  pkl-asm.c  pkl-asm.h  pkl-asm.pks  pkl-ast.c  pkl-ast.h  pkl-attrs.def  pkl-compiler.h  pkl-config.pk.in  pkl-diag.c  pkl-diag.h  pkl-env.c  pkl-env.h  pkl-fold.c  pkl-fold.h  pkl-gen-attrs.pks  pkl-gen-builtins.pks  (+38 more)
m4/: tcl.m4
m4-utility/: jitter-script.m4sh
man/: Makefile.am
maps/: Makefile.am
pickles/: Makefile.am  README.dwarf  README.elf  argp.pk  asn1-ber.pk  base64.pk  bmp.pk  bpf.pk  bpfcore.pk  btf-dump.pk  btf-ext.pk  btf.pk  coff-aarch64.pk  coff-i386.pk  coff-pe.pk  coff.pk  color.pk  crc16.pk  ctf-dump.pk  ctf-frame-dump.pk  ctf-frame.pk  ctf.pk  diff.pk  dwarf-common.pk  dwarf-eh-frame-hdr.pk  dwarf-expr.pk  dwarf-frame.pk  dwarf-info.pk  dwarf-pubnames.pk  dwarf-types.pk  dwarf.pk  eh-frame.pk  elf-32.pk  elf-64.pk  elf-common.pk  elf.pk  gcov.pk  gpt-partition-attrs.pk  gpt-partition-types.pk  gpt.pk  (+42 more)
pickles/pci/: pci.pk  pci_capability.pk  pci_common.pk
po/: ChangeLog  POTFILES.in
poke/: Makefile.am  pk-cmd-compiler.c  pk-cmd-copy.pk  pk-cmd-def.c  pk-cmd-diff.pk  pk-cmd-dump.pk  pk-cmd-editor.c  pk-cmd-extract.pk  pk-cmd-help.c  pk-cmd-help.pk  pk-cmd-info.c  pk-cmd-info.pk  pk-cmd-ios.c  pk-cmd-ios.pk  pk-cmd-map.c  pk-cmd-misc.c  pk-cmd-misc.pk  pk-cmd-save.pk  pk-cmd-scrabble.pk  pk-cmd-set.c  pk-cmd-set.pk  pk-cmd-vm.c  pk-cmd.c  pk-cmd.h  pk-cmd.pk  pk-copy.pk  pk-diff.pk  pk-dump.pk  pk-extract.pk  pk-help.pk  pk-hserver.c  pk-hserver.h  pk-hserver.pk  pk-info.pk  pk-ios.c  pk-ios.h  pk-map-lex.l  pk-map-parser.h  pk-map-tab.y  pk-map.c  (+15 more)
poked/: Makefile.am  pk-dump-minimal.pk  poked.c  poked.pk  usock-buf-priv.h  usock-buf.c  usock-buf.h  usock.c  usock.h
pokefmt/: Makefile.am  pokefmt.l  pokefmt.pk
scripts/: emulator.in.m4sh  generate-fast-branches.in.m4sh
templates/: vm-main.c  vm.h  vm1.c
tests/: filter-test-case-output.c  utility.in
tests/elementary/: empty.vm  init-fini.test.in
tests/jitterlisp/: jitterlisp.test.in  test-definitions.scm
tests/structured/: begin-end.structured  conditional.structured  euclid.structured  (+4 more)
testsuite/: Makefile.am
utils/: Makefile.am  pk-bin2poke.in  pk-bpfcoredump.in  pk-elfextractor.in  pk-jojopatch.in  pk-strings.in
(+1274 files in other folders)
